# Pio_lab

./: .cursorignore  .cursorrules  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .~lock.Pio_lab_Architecture.pdf#  CODEX_HANDOFF.md  CURSOR_GUIDE.md  MILESTONES_QUICK_REF.md  PROGRESS.md  Pio_lab_Architecture.html  README.md  SCENARIOS_CHECKLIST.md  STRUCTURE.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/rules/: architecture-lock.mdc  provider-routing.mdc  python-conventions.mdc  security.mdc  testing.mdc
.github/workflows/: architecture-check.yml  lint.yml  tests.yml
config/: pio_lab.yaml  providers.yaml  security_policy.yaml
config/departments/: _registry.yaml
docs/: 7_layers.md  EXAMPLES.md  PROVIDER_API_REFERENCE.md  adding_departments.md  architecture.md
infra/docker/: app.Dockerfile
infra/tailscale/: README.md
pio_lab/: __init__.py  main.py
pio_lab/core/: __init__.py  registry.py
pio_lab/layer0_console/: __init__.py  admin.py
pio_lab/layer1_input/: __init__.py  channel_router.py  discord_adapter.py  telegram_adapter.py  web_adapter.py  zalo_adapter.py
pio_lab/layer2_runtime/: __init__.py  openclaw.py
pio_lab/layer3_chief_of_staff/: __init__.py  chief_of_staff.py  dispatch.py  (+5 more)
prompts/: README.md  add_department.md  agent_launch.md  debug.md  fix_test.md  refactor.md  review_milestone.md  start_milestone.md
scripts/: add_department.py  backup.sh  init_db.py  setup.py  smoke_telegram.py  start_dev.sh  start_prod.sh  start_telegram_bot.py
tests/: conftest.py
vault/: AGENTS.md  README.md  SOUL.md  USER.md
(+96 files in other folders)
