[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pio_lab"
version = "0.1.0"
description = "Personal AI Company — Hybrid Multi-Agent System"
authors = [{ name = "Sếp Linh", email = "linhcoder8@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # API server (Layer 0 Console + Web channel)
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # Database (Memory Layer)
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",

    # Provider SDKs (Provider Router)
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "google-generativeai>=0.5.0",
    "ollama>=0.2.0",

    # Channel Adapters (Layer 1)
    "python-telegram-bot>=21.0",
    "discord.py>=2.3.0",

    # Utils
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "ipython>=8.20.0",
]

[project.scripts]
pio = "pio_lab.main:main"

[tool.setuptools.packages.find]
include = ["pio_lab*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
